--- a/style.css
+++ b/style.css
@@ -47,3 +47,28 @@ margin-bottom: 100px;
 padding-right: 100px;
 color: #F1F1F1;
 }
+
+@media only screen and (max-width: 600px) {
+  p {
+    font-size: 2.5em;
+  }
+
+  h1 {
+    font-size: 1.7em;
+  }
+
+  .work {
+    font-size: 1.7em;
+  }
+
+  .smalltitle {
+    font-size: 1em;
+  }
+
+  .logo {
+    width: "50px";
+    height: "50px";
+
+}
+
+}
