--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ padding-right: 100px;
 color: #F1F1F1;
 }
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   p {
     font-size: 2.5em;
   }
@@ -66,7 +66,7 @@ color: #F1F1F1;
   }
 
   .logo {
-    width: "50px";
+    width="60";
     height: "50px";
 
 }
