--- a/style.css
+++ b/style.css
@@ -48,7 +48,10 @@ padding-right: 100px;
 color: #F1F1F1;
 }
 
-@media screen and (max-width: 600px) {
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3) {
   p {
     font-size: 2.5em;
   }
