--- a/style.css
+++ b/style.css
@@ -48,9 +48,7 @@ padding-right: 100px;
 color: #F1F1F1;
 }
 
-@media only screen
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2) {
+@media all and (max-width:480px) {
 
   p {
     font-size: 2.5em;
