--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ padding-right: 100px;
 color: #F1F1F1;
 }
 
-@media only screen and (max-width:320px) {
+@media (max-width:800px) {
 
   p {
     font-size: 2.5em;
