--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ padding-right: 100px;
 color: #F1F1F1;
 }
 
-@media (max-width:800px) {
+@media all and (max-width:480px) {
 
   p {
     font-size: 0.5em;
