--- a/style.css
+++ b/style.css
@@ -51,11 +51,11 @@ color: #F1F1F1;
 @media all and (max-width:480px) {
 
   p {
-    font-size: 2em;
+    font-size: 32px;
   }
 
   h1 {
-    font-size: 1.5em;
+    font-size: 48px;
   }
 
   .work {
